--- a/example/example1.html
+++ b/example/example1.html
@@ -9,14 +9,14 @@
     <link href="../src/css/slidingTabs.min.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script> -->
     <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="../src/js/slidingTabsDirective.min.js"></script>
+    <script src="../src/js/slidingTabsDirective.js"></script>
 
     <script>
         var app = angular.module('starter', ['ionic']);
