--- a/example/example2.html
+++ b/example/example2.html
@@ -9,14 +9,13 @@
     <link href="../src/css/slidingTabs.min.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="../src/js/slidingTabsDirective.min.js"></script>
+    <script src="../src/js/slidingTabsDirective.js"></script>
 
     <script>
         var app = angular.module('starter', ['ionic']);
@@ -46,7 +45,7 @@
 <ion-nav-view ng-controller="MainController"></ion-nav-view>
 
 <script id="index.html" type="text/ng-template">
-    <ion-view view-title="Sliding Tabs 1">
+    <ion-view view-title="Sliding Tabs 2">
         <ion-content scroll="false">
             <ion-slide-box slide-tabs-scrollable="true"  show-pager="false" ion-slide-tabs>
                 <ion-slide ion-slide-tab-label="tab"><h1>Tab 1</h1></ion-slide>
