Support having tabs with icons

--- a/example/example1.html
+++ b/example/example1.html
@@ -50,10 +50,10 @@
 <script id="index.html" type="text/ng-template">
     <ion-view view-title="Sliding Tabs 1">
         <ion-content scroll="false">
-            <ion-slide-box slide-tabs-scrollable="false"  show-pager="false" ion-slide-tabs>
-                <ion-slide ion-slide-tab-label="test"><h1>Tab 1</h1></ion-slide>
-                <ion-slide ion-slide-tab-label="secondTest"><h1>Tab 2</h1></ion-slide>
-                <ion-slide ion-slide-tab-label="<b>boldTest</b>"><h1>Tab 3</h1></ion-slide>
+            <ion-slide-box slide-tabs-scrollable="false" show-pager="false" ion-slide-tabs>
+                <ion-slide ion-slide-tab-icon-label ion-slide-tab-icon="apple"><h1>Tab 1</h1></ion-slide>
+                <ion-slide ion-slide-tab-icon-label ion-slide-tab-label="text here!"><h1>Tab 2</h1></ion-slide>
+                <ion-slide ion-slide-tab-icon-label ion-slide-tab-icon="smile"><h1>Tab 3</h1></ion-slide>
             </ion-slide-box>
         </ion-content>
     </ion-view>
